# scafolddd

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.cursor/: TeacherAgent.md
.cursor/customModes/: MartinFooler.md  TeacherAgent.md
docs/: EVENT_FLOW_ANALYSIS.md  TESTS.md  TUTORIAL.md
docs/testing/: domain-testing-order.md  entities-testing-summary.md
milestones/: README.md  milestone_part2_domain_layer.py  milestone_part3_application_layer.py
src/application/services/: __init__.py  complete_task_service.py  create_task.py  get_task_service.py  list_tasks_service.py
src/application/use_cases/: __init__.py  complete_task.py  create_task.py  get_task.py  list_tasks.py
src/domain/entities/: task.py
src/domain/events/: __init__.py  base_event.py  task_event.py
src/domain/repositories/: __init__.py  task_repository.py
src/domain/value_objects/: __init__.py  task_id.py  task_status.py  user_id.py
src/infrastructure/: __init__.py  container.py
src/infrastructure/messaging/: __init__.py  sns_event_bus.py
src/infrastructure/repositories/: __init__.py  dynamodb_task_repository.py
tests/: conftest.py
tests/integration/infrastructure/: test_dynamodb_task_repository.py  test_sns_event_bus.py
tests/unit/application/: __init__.py  test_services.py
tests/unit/domain/: test_entities.py  test_events.py  test_repositories.py  test_value_objects.py
tutorial/: EVENT_FLOW.md  TUTORIAL.md
tutorial/tests/: API_LAYER.md  APPLICATION_LAYER.md  CDK_DEPLOYMENT.md  DOMAIN_LAYER.md  INFRASTRUCTURE_LAYER.md
(+4 files in other folders)
