[project]
name = "scafolddd"
version = "0.1.0"
description = ""
authors = [
    {name = "ettore.aquino",email = "ettore@ettoreaquino.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "boto3 (>=1.39.9,<2.0.0)",
    "aws-lambda-powertools (>=3.17.0,<4.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "scafolddd", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
moto = "^5.1.8"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"
pre-commit = "^4.2.0"
aws-cdk-lib = "^2.206.0"
constructs = "^10.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
